qmsystem2 (1.0.3) unstable; urgency=low

   [Matias Muhonen]
   * Added QmSystemInformation

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 29 Dec 2010 11:17:08 +0200

qmsystem2 (1.0.2) unstable; urgency=low

   [Matias Muhonen]
   * Optimize QmIPCInterface::callAsynchronously() performance
   * Fixes: NB#214676 - QmSystem does not expose the possibility to make any async calls for blocking functionality

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 27 Dec 2010 12:10:16 +0200

qmsystem2 (1.0.1) unstable; urgency=low

   [Matias Muhonen]
   * Fix warnings from the static analysis tool
   * Optimize QmIPCInterface performance by using QDBusAbstractInterface instead of QDBusInterface
   * Fixes: NB#214660 - QmSystem uses QDBusInterface, potentially causing serious performance issues.

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 23 Dec 2010 12:23:17 +0200

qmsystem2 (1.0.0) unstable; urgency=low

   [Matias Muhonen]
   * Fix missing return in QmKeysPrivate::getKeyState

   [Tapio Rantala]
   * Releasing for MeeGo

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 20 Dec 2010 09:42:40 +0200

qmsystem2 (0.0.11) unstable; urgency=low

   [Matias Muhonen]
   * Made devicelock dependency optional
   * Made usb-moded-dev dependency optional
   * Made sysinfo dependency optional
   * Use pkgconfig with qmake
   * Make bmeipc dependency optional
   * Fix a deprecated location for posedata.h in QmOrientation
   * Made mce dependency optional
   * Test each cabc mode separately
   * Fix cabc test
   * Fixes: NB#211192 - QmLocks makes blocking dbus calls
   * Remove sysfs-watcher
   * Rename qmipcinterface.h => qmipcinterface_p.h

   [Tapio Rantala]
   * Proper package config file format

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 08 Dec 2010 08:55:43 +0200

qmsystem2 (0.0.10) unstable; urgency=low

  [Yang Yang]
  * Add time constraint for manual-usb-test:QmUSBMode::setMode()