@@ -1,7 +1,0 @@
-QT += dbus
-QT -=gui
-
-TARGET = manual-locks-test
-SOURCES += manual_locks.cpp
-
-include(../common-install.pri)
